--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -18,4 +18,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r recquirement.txt
+    - name: deploy to heroku
+      env:
+        HEROKU_API_NAME: ${{secrets.HEROKU_API_NAME}}
+        HEROKU_API_TOKEN: ${{secrets.HEROKU_API_TOKEN}}
+      if: github.ref == 'refs/heads/main' && job.status == 'success'
+      run: |
+        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
+        git push heroku HEAD:main -f
     
