--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -24,6 +24,6 @@ jobs:
         HEROKU_API_TOKEN: ${{secrets.HEROKU_API_TOKEN }}
       if: github.ref == 'refs/heads/master' && job.status == 'success'
       run: |
-        git remote add heroku https://git.heroku.com/HEROKU_API_NAME.git
+        git remote add heroku https://git.heroku.com/acipwithdvc.git
         git push heroku HEAD:master -f
     
