--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: install dependency
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirement.txt
+        pip install -r requirements.txt
     - name: deploy to heroku
       env:
         HEROKU_API_NAME: ${{secrets.HEROKU_API_NAME }}
